Исправлено отображение изображений в результатах фильтрации публикаций